lib/tau_labs_bindings_generated.dart


  /// connecting and disconnecting busses and parameters occurs asynchronously.
  /// synchronizeConnections will block until there are no pending connections,
  /// or until the timeout occurs.
  void AudioContext_synchronizeConnections(
    ffi.Pointer<ffi.Void> context,
    int timeOut_ms,
  ) {
    return _AudioContext_synchronizeConnections(context, timeOut_ms);
  }

  late final _AudioContext_synchronizeConnectionsPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('AudioContext_synchronizeConnections');
  late final _AudioContext_synchronizeConnections =
      _AudioContext_synchronizeConnectionsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int)
      >();

  /// suspend the progression of time in the audio context, any queued samples will play
  void AudioContext_suspend(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_suspend(context);
  }

  late final _AudioContext_suspendPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_suspend',
      );
  late final _AudioContext_suspend =
      _AudioContext_suspendPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>)
      >();

  /// if the context was suspended, resume the progression of time and processing in the audio context
  void AudioContext_resume(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_resume(context);
  }

  late final _AudioContext_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_resume',
      );
  late final _AudioContext_resume =
      _AudioContext_resumePtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>)
      >();

  /// The current time, measured at the start of the render quantum currently
  /// being processed. Most useful in a Node's process routine.
  double AudioContext_currentTime(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_currentTime(context);
  }

  late final _AudioContext_currentTimePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_currentTime',
      );
  late final _AudioContext_currentTime =
      _AudioContext_currentTimePtr.asFunction<
        double Function(ffi.Pointer<ffi.Void>)
      >();

  /// The current time, accurate versus the audio clock. Whereas currentTime
  /// advances discretely, once per render quanta, predictedCurrentTime
  /// is the sum of currentTime, and the amount of realworld time that has
  /// elapsed since the start of the current render quanta. This is useful on
  /// the main thread of an application in order to precisely synchronize
  /// expected audio events and other systems.
  double AudioContext_predictedCurrentTime(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_predictedCurrentTime(context);
  }

  late final _AudioContext_predictedCurrentTimePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_predictedCurrentTime',
      );
  late final _AudioContext_predictedCurrentTime =
      _AudioContext_predictedCurrentTimePtr.asFunction<
        double Function(ffi.Pointer<ffi.Void>)
      >();

  double AudioContext_sampleRate(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_sampleRate(context);
  }

  late final _AudioContext_sampleRatePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_sampleRate',
      );
  late final _AudioContext_sampleRate =
      _AudioContext_sampleRatePtr.asFunction<
        double Function(ffi.Pointer<ffi.Void>)
      >();

  int AudioContext_isInitialized(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_isInitialized(context);
  }

  late final _AudioContext_isInitializedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_isInitialized',
      );
  late final _AudioContext_isInitialized =
      _AudioContext_isInitializedPtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>)
      >();

  int AudioContext_isConnected(
    ffi.Pointer<ffi.Void> context,
    int destinationIndex,
    int sourceIndex,
  ) {
    return _AudioContext_isConnected(context, destinationIndex, sourceIndex);
  }

  late final _AudioContext_isConnectedPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)
    >
  >('AudioContext_isConnected');
  late final _AudioContext_isConnected =
      _AudioContext_isConnectedPtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>, int, int)
      >();

  void AudioContext_setDeviceNode(ffi.Pointer<ffi.Void> context, int nodeId) {
    return _AudioContext_setDeviceNode(context, nodeId);
  }

  late final _AudioContext_setDeviceNodePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('AudioContext_setDeviceNode');
  late final _AudioContext_setDeviceNode =
      _AudioContext_setDeviceNodePtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int)
      >();

  int AudioContext_device(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_device(context);
  }

  late final _AudioContext_devicePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_device',
      );
  late final _AudioContext_device =
      _AudioContext_devicePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int AudioContext_isOfflineContext(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_isOfflineContext(context);
  }

  late final _AudioContext_isOfflineContextPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_isOfflineContext',
      );
  late final _AudioContext_isOfflineContext =
      _AudioContext_isOfflineContextPtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>)
      >();

  int AudioContext_currentSampleFrame(ffi.Pointer<ffi.Void> context) {
    return _AudioContext_currentSampleFrame(context);
  }

  late final _AudioContext_currentSampleFramePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_currentSampleFrame',
      );
  late final _AudioContext_currentSampleFrame =
      _AudioContext_currentSampleFramePtr.asFunction<
        int Function(ffi.Pointer<ffi.Void>)
      >();

  void AudioContext_connect(
    ffi.Pointer<ffi.Void> context,
    int destination,
    int source,
    int destIdx,
    int srcIdx,
  ) {
    return _AudioContext_connect(context, destination, source, destIdx, srcIdx);
  }

  late final _AudioContext_connectPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
      )
    >
  >('AudioContext_connect');
  late final _AudioContext_connect =
      _AudioContext_connectPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int, int, int)
      >();

  /// completely disconnect the node from the graph
  void AudioContext_disconnect(
    ffi.Pointer<ffi.Void> context,
    int destination,
    int source,
    int destIdx,
    int srcIdx,
  ) {
    return _AudioContext_disconnect(
      context,
      destination,
      source,
      destIdx,
      srcIdx,
    );
  }

  late final _AudioContext_disconnectPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
      )
    >
  >('AudioContext_disconnect');
  late final _AudioContext_disconnect =
      _AudioContext_disconnectPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int, int, int)
      >();

  /// completely disconnect the node from the graph
  void AudioContext_disconnectCompletely(
    ffi.Pointer<ffi.Void> context,
    int node,
    int destIdx,
  ) {
    return _AudioContext_disconnectCompletely(context, node, destIdx);
  }

  late final _AudioContext_disconnectCompletelyPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)
    >
  >('AudioContext_disconnectCompletely');
  late final _AudioContext_disconnectCompletely =
      _AudioContext_disconnectCompletelyPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int)
      >();

  /// connect a parameter to receive the indexed output of a node
  void AudioContext_connectParam(
    ffi.Pointer<ffi.Void> context,
    int paramNodeId,
    int paramId,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_connectParam(
      context,
      paramNodeId,
      paramId,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_connectParamPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
      )
    >
  >('AudioContext_connectParam');
  late final _AudioContext_connectParam =
      _AudioContext_connectParamPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int, int, int)
      >();

  /// connect destinationNode's named parameter input to driver's indexed output
  void AudioContext_connectParamByName(
    ffi.Pointer<ffi.Void> context,
    int destinationNodeId,
    ffi.Pointer<ffi.Char> parameterName,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_connectParamByName(
      context,
      destinationNodeId,
      parameterName,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_connectParamByNamePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Int,
      )
    >
  >('AudioContext_connectParamByName');
  late final _AudioContext_connectParamByName =
      _AudioContext_connectParamByNamePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
        )
      >();

  /// disconnect a parameter from the indexed output of a node
  void AudioContext_disconnectParam(
    ffi.Pointer<ffi.Void> context,
    int paramNodeId,
    int paramId,
    int driverNodeId,
    int index,
  ) {
    return _AudioContext_disconnectParam(
      context,
      paramNodeId,
      paramId,
      driverNodeId,
      index,
    );
  }

  late final _AudioContext_disconnectParamPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
      )
    >
  >('AudioContext_disconnectParam');
  late final _AudioContext_disconnectParam =
      _AudioContext_disconnectParamPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int, int, int)
      >();

  void AudioContext_releaseContext(ffi.Pointer<ffi.Void> ctx) {
    return _AudioContext_releaseContext(ctx);
  }

  late final _AudioContext_releaseContextPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'AudioContext_releaseContext',
      );
  late final _AudioContext_releaseContext =
      _AudioContext_releaseContextPtr.asFunction<
        void Function(ffi.Pointer<ffi.Void>)
      >();

  /// ///////////////
  /// AudioParam ///
  /// ///////////////
  double AudioParam_value(int nodeId, int paramIndex) {
    return _AudioParam_value(nodeId, paramIndex);
  }

  late final _AudioParam_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
        'AudioParam_value',
      );
  late final _AudioParam_value =
      _AudioParam_valuePtr.asFunction<double Function(int, int)>();

  void AudioParam_setValue(int nodeId, int paramIndex, double value) {
    return _AudioParam_setValue(nodeId, paramIndex, value);
  }
